# kaggle-Gemma-meets-LangChain

./: .gitignore  README.md
.devcontainer/: devcontainer.json
app/: pyproject.toml
docker/: docker-compose.yml
docker/app/: Dockerfile
