[tool.poetry]
name = "kaggle-ai-assistant-with-gemma"
version = "0.1.0"
description = ""
authors = ["Miki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
tqdm = "^4.66.2"
transformers = "^4.38.1"
kaggle = "^1.6.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
